activity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      name: activity-service
      labels:
        app: activity-service
    spec:
      containers:
        - name: activity-service
          image: baimon664/activity-service:1.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: activity-service
