chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service-deployment
  template:
    metadata:
      name: chat-service-deployment
      labels:
        app: chat-service-deployment
    spec:
      containers:
        - name: chat-service-deployment
          image: baimon664/chat-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
spec:
  type: ClusterIP
  selector:
    app: chat-service-deployment
  ports:
    - port: 8080
      targetPort: 8080
