rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-deployment
  template:
    metadata:
      name: rabbitmq-deployment
      labels:
        app: rabbitmq-deployment
    spec:
      containers:
        - name: rabbitmq-deployment
          image: rabbitmq:3-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
              name: discovery
            - containerPort: 5672
              name: amqp
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq-deployment
  ports:
    - port: 15672
      targetPort: 15672
      name: discovery
    - port: 5672
      targetPort: 5672
      name: amqp
