user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service-deployment
  template:
    metadata:
      name: user-service-deployment
      labels:
        app: user-service-deployment
    spec:
      containers:
        - name: user-service-deployment
          image: baimon664/user-service-gateway:1.5
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "2Gi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-nodeport
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
    cloud.google.com/neg: '{"ingress":false}'
spec:
  type: NodePort
  selector:
    app: user-service-deployment
  ports:
    - port: 4000
      targetPort: 4000
